<resources>
    <string name="api_url" translatable="false">http://192.168.1.80:8080</string>
    <string name="api_key" translatable="false">AIzaSyD9NK-MSn1jh0XUBBoDpxJ1VyZLM6_AWYU</string>
    <string name="facebook_app_id" translatable="false">201024236899932</string>

    <string name="app_name">Lost n Found</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_lastname">Last name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">New to LostnFound? Sign up now.</string>
    <string name="btn_link_to_login">Back to login panel.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_language">Language</string>
    <string name="menu_sync">Sync</string>
    <string name="language_selector">Select language!</string>
    <string name="tab_search">Search</string>
    <string name="tab_items">My items</string>
    <string name="tab_new_item">Found something</string>
    <string name="tab_followings">Followings</string>
    <string name="lang_en">English</string>
    <string name="lang_hu">Magyar</string>
    <string name="photo_picker_camera">Take Photo</string>
    <string name="photo_picker_galery">Choose from Library</string>
    <string name="photo_picker_file">Select File</string>
    <string name="photo_picker_title">Add Photo!</string>
    <string name="btn_add_photo">Photo</string>
    <string name="btn_pick_place">Pick Place</string>
    <string name="btn_add_item">add item</string>
    <string name="btn_follow">Follow</string>
    <string name="btn_follow_pick_place">Pick Place</string>
    <string name="text_follow_new_place">Follow new place</string>
    <string name="wellcome_msg">"Wellcome "</string>
    <string name="search_field_hint">Search</string>
    <string name="Search">Search</string>
    <string name="pick_place_and_photo">Pick Google Place and Select Photo!</string>
    <string name="type_title_and_description">Type item title and description!</string>
    <string name="new_item_tab_title">New item found</string>
    <string-array name="search_filter_array">
        <item>Title</item>
        <item>Description</item>
        <item>Place</item>
        <item>User</item>
        <item>Date</item>
    </string-array>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="sharing_1">Someone found this </string>
    <string name="sharing_2"> at </string>
    <string name="sharing_3">! Check out if it belongs to you! :)</string>
    <string name="contact_1">Question about </string>
    <string name="contact_2">Dear </string>

    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>

    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>

    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>

    <string name="btn_remove_following">remove</string>
    <string name="activity_detailed_description">Description:</string>
    <string name="activity_detailed_location">Location:</string>
    <string name="activity_detailed_founder">Founder:</string>
    <string name="fragment_newitem_title_hint">title</string>
    <string name="fragment_newitem_desc_hint">description</string>
</resources>
