<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/activity_login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:text="@string/lost_n_found"
        android:textColor="@color/white"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/activity_login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/inputfield_bg"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/inputfield_text"
        android:textColorHint="@color/inputfield_hint" />

    <EditText
        android:id="@+id/activity_login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_email"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/inputfield_bg"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/inputfield_text"
        android:textColorHint="@color/inputfield_hint" />


    <Button
        android:id="@+id/activity_login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_login_password"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_login_texture"
        android:text="@string/btn_login"
        android:textColor="@color/btn_login" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/activity_login_btnFbLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


    <Button
        android:id="@+id/activity_login_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>