<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.DetailedActivity"
    tools:showIn="@layout/activity_detailed_frame">

    <TextView
        android:id="@+id/activity_detailed_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/activity_detailed_image"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/activity_detailed_title" />


    <TextView
        android:id="@+id/activity_detailed_founder_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_detailed_title"
        android:layout_toEndOf="@+id/activity_detailed_image"
        android:layout_toRightOf="@+id/activity_detailed_image"
        android:text="@string/activity_detailed_founder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_detailed_founder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_detailed_title"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/activity_detailed_founder_header"
        android:layout_toRightOf="@+id/activity_detailed_founder_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/activity_detailed_location_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_detailed_founder_header"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/activity_detailed_image"
        android:layout_toRightOf="@+id/activity_detailed_image"
        android:text="@string/activity_detailed_location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_detailed_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_detailed_founder_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/activity_detailed_location_header"
        android:layout_toRightOf="@+id/activity_detailed_location_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/activity_detailed_description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_detailed_image"
        android:layout_marginTop="20dp"
        android:text="@string/activity_detailed_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/activity_detailed_description"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_detailed_description_header"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</RelativeLayout>
